hphp/test/zend/good/zend/clone_004.php.exp
HipHop Fatal error: Object does not implement ArrayAccess in hphp/test/zend/good/zend/clone_004.php on line 13
